# Metadata-Service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  database.py  main.py
app/api/: routes.py
app/models/: models.py
app/schemas/: schemas.py
app/services/: services.py
